--- a/templates/index5.html
+++ b/templates/index5.html
@@ -26,7 +26,7 @@
         }
 
         #photoButton {
-            background-color: #4CAF50;
+            background-color: #FF9800;
             color: white;
             border: none;
             cursor: pointer;
